# ai-predictive-maintenance-deployment-toolkit

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py  streamlit_app.py
app/agent/: __init__.py  schemas.py  tools.py  workflow.py
app/evaluation/: __init__.py  evaluate_agent.py  evaluate_rag.py  test_questions.json
app/rag/: __init__.py  ingest.py  prompts.py  retriever.py
data/: README.md
data/manuals/: bearing_fault_guide.md  cmapss_engine_fault_notes.md  fault_case_notes.md  maintenance_policy.md  motor_overheating_guide.md  project_delivery_governance.md  sensor_anomaly_guide.md
deployment/: Dockerfile  streamlit_cloud.md
docs/: architecture.md  blog.md  deployment_runbook.md  future_work.md  go_no_go_checklist.md  model_card.md  pilot_deployment_plan.md  risk_register.md  stakeholder_map.md  wbs.md
examples/: example_fleet_output.csv  sample_input.csv
scripts/: generate_sample_data.py  prepare_cmapss_fd001.py  render_dashboard_preview.py  train_model.py
src/pdm_toolkit/: __init__.py  config.py  data.py  features.py  model.py  pipeline.py  scoring.py
tests/: test_agent.py  test_evaluation.py  test_pipeline.py  test_rag.py
